# surface-dial-rust

./: .gitignore  AGENTS.md  Cargo.toml  Info.plist  LICENSE  README.md  build.rs  com.surface-dial.volume-controller.plist  install.sh  uninstall.sh
.beads/: issues.jsonl
.github/workflows/: release.yml
src/: config.rs  daemon.rs  lib.rs  main.rs  pidfile.rs
src/cli/: config_cmd.rs  daemon_cmd.rs  mod.rs  status_cmd.rs
src/hid/: mock.rs  mod.rs
src/input/: mod.rs
src/logging/: mod.rs
src/platform/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
tests/: config_integration.rs  hid_integration.rs  input_integration.rs
tests/e2e/: common.sh  run_all.sh  test_cli.sh  test_config.sh
